Using the minimalist theme, and created a posts and projects page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: rohit saxena
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<img src="http://technicalpickles.com/images/hammock.jpg" alt="color photo ftl" />
+
+<p>I'm Josh Nichols, a software developer in Savannah, GA. I work at <a href="http://railsmachine.com">Rails Machine</a> as CTO. I'm technicalpickles or techpickles on most services.
