Changed the factual details

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 layout: default
 title: rohit saxena
 ---
+<h1>I am ...</h1>
+<hr />
 
-<img src="http://technicalpickles.com/images/hammock.jpg" alt="color photo ftl" />
+<img src="/images/rohit.jpg" alt="color photo ftl" />
 
-<p>I'm Josh Nichols, a software developer in Savannah, GA. I work at <a href="http://railsmachine.com">Rails Machine</a> as CTO. I'm technicalpickles or techpickles on most services.
+<p>I am Rohit, currently working as a Research Engineer at <a href="http://www.inria.fr/en" target="tab">INRIA</a>
+in France. I have experience in developing for the web, mobile and cloud based distributed applications. I also have 
+experience in developement of scalable storage for big data and parallel numerical simulations using MPI libraries. I have developed 
+in Java, Ruby, Python, C++, Bash and Fortran.</p>
+<p>I consider myself as language and technology agnostic. I could be contacted via
+<a href='mailto:aerohit.saxena@gmail.com'><b>email</b></a>.</p>
