Update profile picture

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: rohit saxena
 <h1>I am ...</h1>
 <hr />
 
-<img src="/images/rohit.jpg" alt="color photo ftl" />
+<!--<img src="/images/rohit.jpg" alt="color photo ftl" />-->
+<img src="/images/NorwayJumpWeb.jpg" alt="color photo ftl" />
 
 <p>I am Rohit, currently working as a Research Engineer at <a href="http://www.inria.fr/en" target="tab">INRIA</a>
 in France. I have experience in developing for the web, mobile and cloud based distributed applications. I also have 
