--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ title: rohit saxena
 <p>I am Rohit, currently working as a Research Engineer at <a href="http://www.inria.fr/en" target="tab">INRIA</a>
 in France. I have experience in developing for the web, mobile and cloud based distributed applications. I also have 
 experience in developement of scalable storage for big data and parallel numerical simulations using MPI libraries. I have developed 
-in Java, Ruby, Python, C++, Bash and Fortran.</p>
+in Java, Ruby, Python, JavaScript, C++, Bash and Fortran.</p>
 <p>I consider myself as language and technology agnostic. I could be contacted via
 <a href='mailto:aerohit.saxena@gmail.com'><b>email</b></a>.</p>
