Changed description about me

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: rohit saxena
 <!--<img src="/images/rohit.jpg" alt="color photo ftl" />-->
 <img src="/images/NorwayJumpWeb.jpg" alt="color photo ftl" />
 
-<p>I am Rohit, currently working as a Research Engineer at <a href="http://www.inria.fr/en" target="tab">INRIA</a>
-in France. I have experience in developing for the web, mobile and cloud based distributed applications. I also have 
-experience in developement of scalable storage for big data and parallel numerical simulations using MPI libraries. I have developed 
-in Java, Ruby, Python, JavaScript, C++, Bash and Fortran.</p>
+<p>I am Rohit, currently working as a Software Developer at <a href="http://www.vakantiediscounter.nl/" target="tab">VakantieDiscounter</a>
+in Amsterdam. I have experience in developing for the web, mobile and cloud based distributed applications. I also have
+experience in developement of scalable storage for big data and parallel numerical simulations using MPI libraries. I have developed
+in Scala, Clojure, Haskell, Java, Ruby, Python, JavaScript, C++, Bash and Fortran.</p>
 <p>I consider myself as language and technology agnostic. I could be contacted via
 <a href='mailto:aerohit.saxena@gmail.com'><b>email</b></a>.</p>
